--- a/FlightSimulation.vcxproj
+++ b/FlightSimulation.vcxproj
@@ -80,6 +80,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);./dep/assimp/include;./dep/freeglut/include;./dep/glew/include;./dep/SOIL/include;</IncludePath>
+    <ReferencePath>$(VC_ReferencesPath_x64);./dep/assimp/lib;./dep/freeglut/lib;./dep/glew/lib;./dep/SOIL/lib;</ReferencePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -91,6 +93,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);./dep/assimp/include;./dep/freeglut/include;./dep/glew/include;./dep/SOIL/include;</IncludePath>
+    <ReferencePath>$(VC_ReferencesPath_x64);./dep/assimp/lib;./dep/freeglut/lib;./dep/glew/lib;./dep/SOIL/lib;</ReferencePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
